// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CardData should match snapshot for DC back data 1`] = `
<View
  style={
    {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    }
  }
  testID="dcBackDataTestID"
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "position": "absolute",
        },
        {
          "right": "6%",
          "top": "10%",
        },
        {
          "aspectRatio": "1/1",
          "width": "32%",
        },
      ]
    }
  >
    <View
      accessibilityLabel="QR Code"
      accessibilityRole="image"
      accessible={true}
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={0}
        bbWidth={0}
        focusable={false}
        height={0}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          }
        }
        vbHeight={0}
        vbWidth={0}
        width={0}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -65536,
                  1,
                  -16711681,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="grad"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="100%"
            />
          </RNSVGDefs>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 4294967295,
                  "type": 0,
                }
              }
              height={0}
              propList={
                [
                  "fill",
                ]
              }
              width={0}
              x={-0}
              y={-0}
            />
          </RNSVGGroup>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              d="M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 M0 0 L0 0 "
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                ]
              }
              stroke={
                {
                  "payload": 4279111443,
                  "type": 0,
                }
              }
              strokeLinecap={0}
              strokeWidth={0}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`CardData should match snapshot for DC front data 1`] = `
<View
  style={
    {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    }
  }
  testID="dcFrontDataTestID"
>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "bottom": "1.%",
          "left": "2.55%",
        },
        {
          "aspectRatio": 0.6886792452830188,
          "width": "24.7%",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "right": "3.5%",
          "top": "44.5%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      Marco
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "right": "3.5%",
          "top": "55.9%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      Rossi
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "right": "3.5%",
          "top": "67.3%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      15/03/90
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "right": "3.5%",
          "top": "78.7%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      10008581
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "right": "3.5%",
          "top": "90.1%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      23/03/32
    </Text>
  </View>
</View>
`;

exports[`CardData should match snapshot for MDL back data 1`] = `
<View
  style={
    {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    }
  }
  testID="mdlBackDataTestID"
>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "41.5%",
          "top": "6.8%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 18.75,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      23/01/35
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "55%",
          "top": "6.8%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 18.75,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      16/02/35
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "41.5%",
          "top": "30.3%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 18.75,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      23/01/35
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "55%",
          "top": "30.3%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 18.75,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      16/02/35
    </Text>
  </View>
</View>
`;

exports[`CardData should match snapshot for MDL front data 1`] = `
<View
  style={
    {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    }
  }
  testID="mdlFrontDataTestID"
>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "4%",
          "top": "30%",
        },
        {
          "aspectRatio": 0.8279569892473119,
          "width": "22.5%",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "34%",
          "top": "11.6%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      ROSSI
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "34%",
          "top": "18.5%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      MARCO
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "34%",
          "top": "25.4%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      22/09/92
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "34%",
          "top": "32.300000000000004%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      08/01/2025
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "57.5%",
          "top": "32.300000000000004%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      MC-RM
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "34%",
          "top": "39.2%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      16/02/2035
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "left": "34%",
          "top": "46.1%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      RM8375131N
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
        },
        {
          "bottom": "17.9%",
          "left": "8%",
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={false}
      allowFontScaling={false}
      lineBreakMode="head"
      numberOfLines={1}
      style={
        {
          "color": "#1D1F26",
          "fontFamily": "Titillium Sans Pro",
          "fontSize": 22.916666666666668,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": undefined,
          "textTransform": "none",
        }
      }
    >
      AM B
    </Text>
  </View>
</View>
`;
